packages/scaml.1.2.0~pre7/tests/fail/lang_attrs.ml
[@@@SCaml iml_optimization=false]
[@@@SCaml x = 1; y = 2]
[@@@SCaml z = 3]

open SCaml
let main (x : unit) (y : unit) = [], ()
